[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "PyQt_MAT_UI"
version = "0.0.2"
authors = [
  { name="RawrRanger", email="scott910324@gmail.com" },
]
description = "PyQt Machine Automation tookit UI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/s910324/PyQt_MAT_UI"
Issues = "https://github.com/s910324/PyQt_MAT_UI/issues"